Fix wrapping in inline forms

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -109,15 +109,17 @@ fieldset {
 }
 
 .inline-form {
+  margin-left: - 0.5 * $gutter;
+  margin-right: - 0.5 * $gutter;
+  margin-bottom: -$gutter;
+  
   input {
     display: inline-block;
-    margin-right: $gutter;
+    margin-right: 0.5 * $gutter;
+    margin-left: 0.5 * $gutter;
+    margin-bottom: $gutter;
     width: auto;
     vertical-align: middle;
-    
-    &:last-child {
-      margin-right: 0;
-    }
   }
   
   .select {
@@ -125,6 +127,9 @@ fieldset {
     display: inline-block;
     vertical-align: middle;
     margin-right: $gutter;
+    margin-right: 0.5 * $gutter;
+    margin-left: 0.5 * $gutter;
+    margin-bottom: $gutter;
     
     select {
       padding-right: 1.875em;
